--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <input type = "submit" value = "enter" class="submit" />
     </fieldset>
-    <div class="hidden">
+    <div class="">
         <h2>Parks in your area</h2>
         <ul class="result-list"></ul>
     </div>
