Made fields required

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </header>
     <fieldset>
         <label for = "state">What State Would You like to Search?</label> 
-        <input type = "text" id="state" /> <br>
+        <input type = "text" id="state" required/> <br>
 
         <label for = "max">How many Parks would you like to look at?</label>
-        <input type = "number" id = "max" /> <br>
+        <input type = "number" id = "max" required/> <br>
 
         <input type = "submit" value = "enter" class="submit" />
     </fieldset>
